--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .main-block
 {
-width: 920; 		
+width: 100%; 		
 height:100%;   
 }
 .news-block1
@@ -11,8 +11,8 @@ background-color: red;
 width: 33%; 		
 height:100%; 		
 padding: 5px;		
-border: 2px solid #889;	
-margin: 10px; 
+border: 2px  solid #889;	
+margin: 10px;  
 }
 .news-block2
 {
@@ -22,7 +22,7 @@ background-color: green;
 width: 33%; 		
 height:100%; 		
 padding: 5px;		
-border: 2px solid #889;	
+border: 2px  solid #889;	
 margin: 10px; 
 }
 .news-block3
