--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .main-block
 {
-width: 100%; 		
-height:100%;   
+width: 960px; 		
+height:900px;   
 }
 .news-block1
 {
@@ -9,10 +9,8 @@ float: left;
 color: black; 
 background-color: red;
 width: 33%; 		
-height:100%; 		
-padding: 5px;		
-border: 2px  solid #889;	
-margin: 10px;  
+height: 100%; 		
+  
 }
 .news-block2
 {
@@ -20,10 +18,8 @@ float: left;
 color: black; 
 background-color: green;
 width: 33%; 		
-height:100%; 		
-padding: 5px;		
-border: 2px  solid #889;	
-margin: 10px; 
+height: 100%; 		
+ 
 }
 .news-block3
 {
@@ -31,9 +27,7 @@ float: left;
 color: black; 
 background-color: blue;
 width: 33%; 		
-height:100%; 		
-padding: 5px;		
-border: 2px solid #889;	
-margin: 10px; 
+height: 100%; 		
+ 
 }
 .clear {clear:both}
